user-service/scripts/config/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: saltuk-kubernetes/user-service:latest
          imagePullPolicy: Never
      volumes:
        - name: user-service-volume
          persistentVolumeClaim:
            claimName: user-service-volume-claim
