user-service/scripts/config/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: user-service
  name: user-service
spec:   
  selector:
    app: user-service
  type: NodePort
  ports:
   - port: 8080
