user-service/scripts/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/users
spec:
  rules:
  - http:
      paths:
      - path: /api/users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8080
